char con observable

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /Sockets/Java/SocketsTCP/build/
 /Sockets/Java/SocketsUDP/nbproject/private/
 /Sockets/Java/SocketsUDP/build/
+/Sockets/Java/EjercicioChatObservables/nbproject/private/
