--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /Sockets/Java/SocketsUDP/nbproject/private/
 /Sockets/Java/SocketsUDP/build/
 /Sockets/Java/EjercicioChatObservables/nbproject/private/
+/Sockets/Java/EjercicioChatObservables/build/
